--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     }
     body, html {
       height: 100%;
-      background: url('ดีไซน์ที่ยังไม่ได้ตั้งชื่อ (8).png') center/cover no-repeat;
+      background: url('background8.png') center/cover no-repeat;
       display: flex;
       justify-content: center;
       align-items: center;
