--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     }
     body, html {
       height: 100%;
-      background: url('background8.png') center/cover no-repeat;
+      background: url('IMG/background8.png') center/cover no-repeat;
       display: flex;
       justify-content: center;
       align-items: center;
