--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ button:active {
 
   <div class="note fade" id="note" style="display:none;">
     <h1>จดหมายมาส่งค้าบ💌</h1>
-    <img src="Pink Simple Romantic Cute Cat Valentine Love Letter.png" alt="Love Note" />
+    <img src="IMG/pink_simple_romantic_cute_cat_valentine_love_letter.png" alt="Love Note" />
     
     <button onclick="goTo('menu')">Back</button>
   </div>
