--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ button:active {
   <div class="gallery fade" id="gallery" style="display:none;">
     <h1>THANK YOU EVERYTHING❤️</h1>
     <div class="video-container">
-      <video src="0601(2).mp4" width="300" controls poster="HIHI.png"></video>
+      <video src="IMG/0601(2).mp4" width="300" controls poster="IMG/HIHI.png"></video>
     </div>
     <div class="back-button">
       <button onclick="goTo('menu')">Back</button>
